feat: integrated the openapi helpers lib
